# word_finder_v2

./: .gitignore  Cargo.toml  README.md  it.dic
.github/workflows/: rust-ci.yml
src/: main.rs
