[package]
name = "word_finder_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
indicatif = {version = "0.17.5", features = ["rayon"]}
num_cpus = "1.15.0"
permutohedron = "0.2.4"
rayon = "1.7.0"
